clone_instagram/logged.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background-color: rgb(241, 241, 241);
}
a{
    text-decoration: none;
}
header{
    display: flex;
    justify-content: space-around;
    align-items: center;

    padding: 0 20px;
    width: 100vw;
    outline: 1px solid rgb(216, 216, 216);
    background-color: rgb(250, 250, 250);
    height: 7vh;

    position: fixed;
    z-index: 10;
}
header img{
    width: 110px;
}
header #search-box{
    display: flex;
    justify-content: center;
    align-items: center;
    
    height: 30px;
    width: 12vw;
    background-color: rgb(241, 241, 241);
    border-radius: 3px;
    border: 1px solid rgb(216, 216, 216);
    text-align: center;

    outline: 0;

    position: fixed;
    z-index: 10;
}
header nav a{
    font-size: 30px;
    margin: 0 10px;
    color: black;
}
#blank{
    height: 7vh;
    width: 100%;
    margin-bottom: 30px;
}
#main{
    display: flex;
    justify-content: center;
    align-items: flex-start;
}
#main-content{
    width: 40vw;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    margin-right: 20px;
}
#main #stories{
    display: flex;
    align-items: center;

    height: 125px;
    background-color: rgb(250, 250, 250);
    border: 1px solid rgb(216, 216, 216);
    width: 100%;
    border-radius: 5px;
    margin-bottom: 25px;
}
#main #stories .user-stories{
    width: 60px;
    height: 60px;
    background-color: rgb(206, 206, 206);
    border-radius: 50%;
    margin: 0 5px 0 5px;

    display: flex;
    align-items: flex-end;
    justify-content: center;
}
#main #stories .user-stories a{
    position: relative;
    bottom: -20px;
}
#main #posts{
    width: 100%;
    background-color: rgb(206, 206, 206);
    border: 1px solid rgb(216, 216, 216);
    border-radius: 5px;
    margin-bottom: 20px;
}

#main #posts #post-header{
    display: flex;
    align-items: center;

    width: 100%;
    height: 60px;
    background-color: rgb(250, 250, 250);
}
#main #posts #post-header #user-img{
    width: 40px;
    height: 40px;
    background-color: rgb(206, 206, 206);
    border-radius: 50%;
    margin-left: 5px; 
}
#main #posts #photo-post{
    width: 100%;
    background-color: salmon;
}
#main #posts #photo-post img{
    width: 100%;
    height: 110%;
}
#main #posts #reactions-btns{
    background-color: rgb(250, 250, 250);
    display: flex;
    align-items: center;
    height: 50px;
    padding: 0 10px;
}
#main #posts #reactions-btns a{
    color: black;
    font-size: 25px;
    margin-right: 20px;
}
#main #posts #reactions-btns #all-right-btn{
    margin-left: auto;
    margin-right: 0;
}
#main #posts #comments{
    background-color: rgb(250, 250, 250);
    height: 10vh;
    overflow: hidden;
    padding: 0;
}
#main #posts #comment-container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 6vh;
}
#main #posts #comment-container input{
    width: 90%;
    height: 100%;

    outline: none;
    border: none;
}
#main #posts #comment-container button{
    width: 10%;
    height: 100%;

    outline: none;
    border: none;
    color: rgb(56, 114, 238);
    font-weight: 600;
    cursor: pointer;
    background-color: white;
}
#main #aside{
    position: static;
    right: 160px;
    width: 350px;
    height: 50vh;
}
#main #aside #user-div{
    display: flex;
    align-items: center;
    
    height: 25%;
    width: 100%;

    padding: 5px;
}
#main #aside #user-div #user-img{
    width: 60px;
    height: 60px;
    background-color: rgb(206, 206, 206);
    border-radius: 50%;
    margin: 0 10px 0 10px;
}

